--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass": "^1.32.6",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
     "terser-webpack-plugin": "^2.3.8",
